--- a/29919-h/29919-h.htm
+++ b/29919-h/29919-h.htm
@@ -5433,7 +5433,7 @@ on the white slab, stretching him to full length. It was an operating
 table&mdash;and he was to be the subject of their operation!</p>
 
 <p>He had lain there but a moment when two of the Venerians approached,
-one on either side, and began removing his clothing. It was nor long
+one on either side, and began removing his clothing. It was not long
 before he lay on the cold slab, entirely nude.</p>
 
 <hr style="width: 45%;" /><div class="figleft"><img src="images/image_w.jpg" alt="W" width="65" height="50" /></div><p>hile he was being stripped, he heard the leader of the Venerians
@@ -6213,7 +6213,7 @@ on their guard with her.</p>
 voice, and De Boer's, and, mingled with them, the babble of the still
 hilarious bandits in the center of the cave. But there were only a few
 left now; most of them had fallen into heavy slumber. I had been
-asleep for several hours. I<span class="pagenum"><a name="Page_233" id="Page_233">[233]</a></span> figured. The daylight shadows outside the
+asleep for several hours, I<span class="pagenum"><a name="Page_233" id="Page_233">[233]</a></span> figured. The daylight shadows outside the
 cave entrance showed that it was at least noon.</p>
 
 <p>I lay listening to the voices which had awakened me. De Boer was
